templates/sec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context-demo
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
    - name: hello-gin
      image: harbor.codemowers.eu/laurivosandi/hello-gin:latest
