templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-gin
  labels:
    app: hello-gin
spec:
  selector:
    app: hello-gin
  ports:
  - protocol: TCP
    port: 8000
