templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-gin
  annotations:
    kubernetes.io/ingress.class: shared
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: traefik.codemowers.ee
spec:
  rules:
  - host: hello-n6ka.codemowers.ee
    http:
      paths:
      - pathType: Prefix
        path: "/api/v1/gin"
        backend:
          service:
            name: hello-gin
            port:
              name: http
  tls:
  - hosts:
    - "*.codemowers.ee"
